# kv

./: Cargo.toml  LICENSE.md  Makefile  README.md
completions/: kv.bash  kv.zsh
src/: main.rs  storage.rs
