[package]
name = "kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chrono = "0.4.22"
clap = { version = "4.0.10", features = ["derive", "env"] }
clap_complete = "4.0.6"
leveldb = "0.8.6"
log = "0.4.17"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
shellexpand = "2.1.2"
sled = "0.34.7"
tempfile = "3.3.0"
walkdir = "2.3.2"
